* Feature: Use eea.geotags field for landitems. Initialize field value with
  existing selected countries geographic coverage.
  [GhitaB #90603]
* Feature: Add captcha field in register form.
  [GhitaB #92752]
* Feature: Register - override message template adding "Please ignore..." text.
  [GhitaB #92752]
* Fix: Landitem view - larger icons for map fullscreen mode.
  [GhitaB #92986]

3.9 - (2018-02-16)
------------------
* Landitem view - icons for map fullscreen mode.
  [GhitaB #92986]

3.8 - (2018-02-05)
------------------
* Feature: High performance land files - improvements and tests.
  [batradav #90628]

3.7 - (2018-01-30)
------------------
* Fix monthly reports values by including end date in report's period.
  [GhitaB #90919]

3.6 - (2018-01-25)
------------------
* Optimize users statistics scripts to skip LDAP.
  [batradav #90919]
* Improve users statistics administration page.
  [GhitaB #90919]

3.5 - (2018-01-23)
------------------
* Feature: High performance land files.
  [batradav #90628]
* Feature: Sentry logging
  [boteziri #87458]

3.4 - (2018-01-18)
------------------
* Feature: Notify user on deleting his account.
  [GhitaB #91704]

3.3 - (2017-12-20)
------------------
* Use special configure.zcml file from eea.rdfmarshaller to activate
  license widget

3.2 - (2017-12-18)
------------------
* Tweak eea.rdfmarshaller required version
  [tiberich]

3.1 - (2017-12-15)
------------------
* Feature: Users Statistics
  [GhitaB #90561]
* Feature: added LandItem dcterms:description override when description is
  missing
  [tiberich #90546]

3.0 - (2017-12-11)
------------------
* Feature: fullscreen mode for map iframe in landitem view
* Update: Land item view: Change back to Map view as default selected tab.
  [GhitaB #90422 #90655]

2.10 - (2017-12-07)
------------------
* Improve login and reset password pages with info for EIONET members
  [GhitaB #90575]

2.9 - (2017-11-23)
------------------